@@ -595,6 +595,9 @@ using namespace @cpu@;
 		  copyright-red-hat package-red-hat-simulators)
    "\
 
+#if HAVE_CONFIG_H
+#include \"config.h\"
+#endif
 #include \"@cpu@.h\"
 
 using namespace @cpu@; // FIXME: namespace organization still wip
