@@ -1,3 +1,10 @@
+2003-06-10  Dave Brolley  <brolley@redhat.com>
+
+	* sid-cpu.scm: Generate #include of config.h into @prefix@-sem.cxx.
+	* sid-decode.scm: Generate #include of config.h into
+	@prefix@-decode.cxx.
+	* sid-model.scm: Generate #include of config.h into @prefix@-model.cxx.
+
 2003-06-07  Doug Evans  <dje@sebabeach.org>
 
 	* gen-all-sid: New file.
